--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <artifactId>rabbitmq</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.2.RELEASE</version>
+    </parent>
+
     <dependencies>
         <dependency>
             <groupId>com.rabbitmq</groupId>
@@ -19,7 +25,17 @@
             <artifactId>junit</artifactId>
             <version>4.13.1</version>
         </dependency>
-    </dependencies>
+
+    <!--RabbitMQ 整合 SpringBoot-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+  </dependencies>
 
 
 </project>
