--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
       simple:
         acknowledge-mode: manual  # 设置手动ack确认
         prefetch: 10  # 设置消息流控
-#    publisher-confirms: true  # SpringBoot 2.1版本以下 使用 已弃用
+        max-concurrency:
+    #    publisher-confirms: true  # SpringBoot 2.1版本以下 使用 已弃用
     publisher-confirm-type: correlated # 开启confirms确认，确保消息到达交换机（2.1版本后）
     publisher-returns: true  # 开启Return机制，确保消息成功路由到队列
